# MarsRoverHaskell

./: ChangeLog.md  MarsRoverHaskell.cabal  README.md  package.yaml
MarsRoverHaskell.hsproj/: .uuid  MarsRoverHaskell.cabal
app/: Main.hs
src/: MarsRover.hs
test/: MarsRoverSpec.hs
