cabal-version: 1.12
name: MarsRoverHaskell
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2020 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/MarsRoverHaskell#readme
bug-reports: https://github.com/githubuser/MarsRoverHaskell/issues
description:
    Please see the README on Github at <https://github.com/githubuser/MarsRoverHaskell#readme>
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/MarsRoverHaskell

library
    exposed-modules:
        Util
        Run
        Import
        Types
        MarsRover
    hs-source-dirs: src
    other-modules:
        Paths_MarsRoverHaskell
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities
                 -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wpartial-fields -Wredundant-constraints
    build-depends:
        base -any,
        rio -any

executable MarsRoverHaskell-exe
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Paths_MarsRoverHaskell
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities
                 -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
                 -with-rtsopts=-N
    build-depends:
        MarsRoverHaskell -any,
        base -any,
        optparse-simple -any,
        rio -any

test-suite MarsRoverHaskell-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        MarsRoverSpec
        Paths_MarsRoverHaskell
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities
                 -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
                 -with-rtsopts=-N
    build-depends:
        MarsRoverHaskell -any,
        base -any,
        hspec -any,
        rio -any
